@@ -31,6 +31,8 @@ Bugs fixed
   (closes :issue:`362` and :issue:`366`)
 - Fixed support for unicode node names in LRU cache (only Python 2 was
   affected). Closes :issue:`367` and :issue:`369`.
+- Fixed support for unicode node titles (only Python 2 was affected).
+  Closes :issue:`370` and :issue:`374`.
 
 
 Changes from 3.1.0 to 3.1.1
